tests/baselines/reference/contextualTyping5.errors.txt
tests/cases/compiler/contextualTyping5.ts(1,20): error TS2737: Property 'id' is missing in type '{}' but present in type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping5.ts (1 errors) ====
    class foo { public bar:{id:number;} = { }; }
                       ~~~
!!! error TS2737: Property 'id' is missing in type '{}' but present in type '{ id: number; }'.
!!! related TS2728 tests/cases/compiler/contextualTyping5.ts:1:25: 'id' is declared here.